@@ -512,10 +512,16 @@ AC_CHECK_HEADERS(dssi.h,
 AM_CONDITIONAL(HAVE_DSSI, test $config_have_dssi = "yes")
 
 # LV2
-PKG_CHECK_MODULES(LV2, lv2core, config_have_lv2="yes", config_have_lv2="no")
-if test $config_have_lv2 = "no"; then
-    AC_CHECK_HEADER(lv2.h, config_have_lv2="yes", config_have_lv2="no")
-fi
+PKG_CHECK_MODULES(LV2, lv2,
+  [config_have_lv2="yes"
+  AC_DEFINE(HAVE_LV2_PACKAGE, 1,
+            [Define to 1 if you have the lv2 package installed.])],
+  [config_have_lv2="no"
+  PKG_CHECK_MODULES(LV2, lv2core, config_have_lv2="yes",
+    [AC_CHECK_HEADER(lv2.h, config_have_lv2="yes")])])
+
+AC_SUBST(LV2_CFLAGS)
+AC_SUBST(LV2_LIBS)
 AM_CONDITIONAL(HAVE_LV2, test $config_have_lv2 = "yes")
 
 # VST
@@ -628,7 +634,7 @@ AC_SUBST(SNDFILE_LIBS)
 # Check for Vorbis support in libsndfile
 linuxsampler_save_CFLAGS=$CFLAGS
 CFLAGS="$SNDFILE_CFLAGS $CFLAGS"
-AC_CHECK_DECLS([SF_FORMAT_VORBIS], [], [] ,[[#include <sndfile.h>]])
+AC_CHECK_DECLS([SF_FORMAT_VORBIS], [], [], [[#include <sndfile.h>]])
 
 # Check for loop functionality in libsndfile
 AC_CHECK_MEMBERS([SF_INSTRUMENT.loops],,
@@ -740,8 +746,7 @@ AC_ARG_ENABLE(pthread-testcancel,
                           asynchronous cancel of pthreads (default=yes
                           for Mac targets, no otherwise).],
   [config_pthread_testcancel="$enableval"],
-  []
-)
+  [])
 if test "$config_pthread_testcancel" = "yes"; then
   AC_DEFINE_UNQUOTED(CONFIG_PTHREAD_TESTCANCEL, 1, [Define to 1 to enable pthread_testcancel() calls.])
 fi
