@@ -1,6 +1,6 @@
 /***************************************************************************
  *                                                                         *
- *   Copyright (C) 2008-2009 Andreas Persson                               *
+ *   Copyright (C) 2008-2012 Andreas Persson                               *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -21,11 +21,54 @@
 #ifndef LSATOMIC_H
 #define LSATOMIC_H
 
-/*
- * Implementation of a small subset of the C++0x atomic operations
- * (cstdatomic).
+/** @file
  *
- * The supported operations are:
+ * Implementation of a small subset of the C++11 atomic operations.
+ *
+ * Note: When working with multithreading on modern CPUs, it's
+ * important not only to make sure that concurrent access to shared
+ * variables is made atomically, but also to be aware of the order the
+ * stores get visible to the loads in other threads. For example, if x
+ * and y are shared variables with initial values of 0, the following
+ * program:
+ *
+ * @code
+ *  // thread 1:
+ *  x.store(1, memory_order_relaxed);
+ *  r1 = y.load(memory_order_relaxed);
+ *
+ *  // thread 2:
+ *  y.store(1, memory_order_relaxed);
+ *  r2 = x.load(memory_order_relaxed);
+ * @endcode
+ *
+ * would have a possible outcome of r1 == 0 and r2 == 0. The threads
+ * might for example run on separate CPU cores with separate caches,
+ * and the propagation of the store to the other core might be delayed
+ * and done after the loads. In that case, both loads will read the
+ * original value of 0 from the core's own cache.
+ *
+ * The C++11 style operations use the memory_order parameter to let
+ * the programmer control the way shared memory stores get visible to
+ * loads in other threads. In the example above, relaxed order was
+ * used, which allows the CPU and compiler to reorder the memory
+ * accesses very freely. If memory_order_seq_cst had been used
+ * instead, the r1 == 0 and r2 == 0 outcome would have been
+ * impossible, as sequential consistency means that the execution of
+ * the program can be modeled by simply interleaving the instructions
+ * of the threads.
+ *
+ * The default order is memory_order_seq_cst, as it is the easiest one
+ * to understand. It is however also the slowest. The relaxed order is
+ * the fastest, but it can't be used if the shared variable is used to
+ * synchronize threads for any other shared data. The third order is
+ * acquire/release, where an acquire-load is synchronizing with a
+ * release-store to the same variable.
+ *
+ * See for example http://gcc.gnu.org/wiki/Atomic/GCCMM/AtomicSync for
+ * more information about the memory order parameter.
+ *
+ * The supported operations of the implementation in this file are:
  *
  * - fences (acquire, release and seq_cst)
  *
@@ -34,6 +77,27 @@
  *
  * The supported architectures are x86 and powerpc.
  */
+
+
+// if C++11 and gcc 4.7 or later is used, then use the standard
+// implementation
+#if __cplusplus >= 201103L && \
+    (__GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ >= 7))
+
+#include <atomic>
+
+namespace LinuxSampler {
+    using std::memory_order_relaxed;
+    using std::memory_order_acquire;
+    using std::memory_order_release;
+    using std::memory_order_seq_cst;
+    using std::atomic_thread_fence;
+    using std::atomic;
+}
+
+#else
+
+
 namespace LinuxSampler {
     enum memory_order {
         memory_order_relaxed, memory_order_acquire,
@@ -132,4 +196,5 @@ namespace LinuxSampler {
         atomic& operator=(const atomic&); // not allowed
     };
 }
+#endif
 #endif
