@@ -19,6 +19,9 @@ Version CVS HEAD (?)
       configure
     - Mac OS X: Makefile fix for the install-strip target
     - fixed compilation with gcc 4.7
+    - fixed configure script error with old autoconf versions
+    - lsatomic.h: use gcc provided atomic functions if building with
+      gcc 4.7 and C++11
 
   * general changes:
     - Refactoring: moved the independent code from
@@ -248,6 +251,7 @@ Version CVS HEAD (?)
       loaded a second time (this time it's for Linux and Mac, previous
       similar fix was for Windows)
     - thread safety fixes for the instrument loading thread
+    - LV2: use the new lv2 package if present
 
   * MIDI driver:
     - ALSA MIDI driver supports now "NAME" device parameter, for overriding
